# visualnav-transformer

./: README.md
deployment/: deployment_environment.yaml
deployment/config/: camera_front.yaml  robot.yaml
deployment/src/: create_topomap.py  create_topomap.sh  explore.py  explore.sh  joy_teleop.py  navigate.py  navigate.sh  pd_controller.py  record_bag.sh  ros_data.py  topic_names.py  utils.py
train/: pyproject.toml  train_environment.yml
